--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>video by nghiemtv.com</title>
+    <title>video by thientv.com</title>
     <link rel="stylesheet" href="index.css" />
 </head>
 <body>
@@ -182,7 +182,7 @@ let adjustX = -3;
 let adjustY = -3;
 ctx.fillStyle = 'white';
 ctx.font = '17px Verdana';
-ctx.fillText('NGHIEM TV', 20, 42);
+ctx.fillText('H.T.Thiện', 20, 42);
 const textCoordinates = ctx.getImageData(0, 0, 100, 100);
 
 class Particle2 {
