--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ let adjustX = -3;
 let adjustY = -3;
 ctx.fillStyle = 'white';
 ctx.font = '17px Verdana';
-ctx.fillText('THIỆN', 20, 42);
+ctx.fillText('THIỆN ĐZ', 20, 42);
 const textCoordinates = ctx.getImageData(0, 0, 100, 100);
 
 class Particle2 {
